Updated the Navbar and fixed card layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 
 body {
     background-color: lightpink;
-    background-image: url('/images/background.jpg');
+    background-image: url('/backgroundimage.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; 
